      following the advice for the recently added
      useless-autoreconf-build-depends tag.  (Closes: #869541)
  * checks/fields.pm:
    + [CL] Ensure that python3-foo packages have "Section: python", not
      just python2-foo.  (Closes: #870272)
  * checks/python.{pm,desc}:
    + [CL] Split out Python checks from "scripts" check to a new, source
      check of type "source".
  * checks/scripts.pm:
    + [CL] Correct false positives in
      unconditional-use-of-dpkg-statoverride by detecting "if !" as a
      valid shell prefix.  (Closes: #869587)
  * checks/testsuite.{desc,pm}:
    + [CL] Remove recommendations to add a "Testsuite: autopkgtest" field
      to debian/control as it is added when needed by dpkg-source(1)
      since dpkg 1.17.1.  (Closes: #865531)
    + [CL] Warn if we see an unnecessary "Testsuite: autopkgtest" header
      in debian/control.
    + [NT] Recognise "autopkgtest-pkg-go" as a valid test suite.

  * commands/lintian.pm:
    + [CL] Apply patch from Maia Everett to avoid British spelling when
      using en_US locale.  (Closes: #868897)

  * helpers/coll/objdump-info-helper:
    + [CL] Apply patch from Steve Langasek to accomodate binutils 2.29
      outputting symbols in a different format on ppc64el.
      (Closes: #869750)

 -- Niels Thykier <niels@thykier.net>  Sun, 23 Jul 2017 10:16:35 +0000

lintian (2.5.52) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - appstream-metadata-in-legacy-location
      - appstream-metadata-legacy-format
      - appstream-metadata-malformed-modalias-provide
      - appstream-metadata-missing-modalias-provide
      - copyright-contains-automatically-extracted-boilerplate
      - copyright-year-in-future
      - debian-rules-sets-DEB_BUILD_OPTIONS
      - elf-maintainer-script
      - emacsen-common-without-dh-elpa
      - file-contains-fixme-placeholder
      - gobject-instrospection-package-missing-depends-on-gir-depends
      - manpage-has-overly-generic-name