@@ -5,11 +5,35 @@ Maintainer: {$author}
 Standards-Version: {$standards_version}
 Build-Depends: debhelper (>= 9)
 
-Package: python-{$source}
+Package: python-{$source}-nopy3
 Architecture: all
 Depends: $\{misc:Depends\}, python2.7
-Description: {$description}
+Description: Python 2 package with no corresponding Python 3 package
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
  things.  It should not be installed like a regular package.  It may
  be an empty package.
+ .
+ This is a Python 2 package with no corresponding Python 3 package.
+
+Package: python-{$source}-withpy3
+Architecture: all
+Depends: $\{misc:Depends\}, python2.7
+Description: Python 2 package with corresponding Python 3 package
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.  It may
+ be an empty package.
+ .
+ This is a Python 2 package with corresponding Python 3 package.
+
+Package: python3-{$source}-withpy3
+Architecture: all
+Depends: $\{misc:Depends\}, python3
+Description: Python 3 package with corresponding Python 2 package
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.  It may
+ be an empty package.
+ .
+ This is a Python 3 package with corresponding Python 2 package.
