@@ -1,1 +1,3 @@
-W: python-python2 source: new-package-should-not-package-python2-module python-python-python2
+I: python-python2 source: python-foo-but-no-python3-foo python-python-python2-nopy3
+W: python-python2 source: new-package-should-not-package-python2-module python-python-python2-nopy3
+W: python-python2 source: new-package-should-not-package-python2-module python-python-python2-withpy3
