@@ -28,6 +28,8 @@ lintian (2.5.53) UNRELEASED; urgency=medium
   * checks/python.{pm,desc}:
     + [CL] Split out Python checks from "scripts" check to a new, source
       check of type "source".
+    + [CL] Check for python-foo without corresponding python3-foo packages
+      to assist in Python 2.x deprecation.  (Closes: #870681)
   * checks/scripts.pm:
     + [CL] Correct false positives in
       unconditional-use-of-dpkg-statoverride by detecting "if !" as a
